# PerseveraTools

./: .gitignore  LICENSE  LOGGING_IMPROVEMENTS.md  README.md  pyproject.toml  run_factor_zoo_daily.bat  run_factor_zoo_independent.bat  setup.py
examples/: comdinheiro_example.py  custom_tickers_example.py  logging_example.py  pluggy_example.py  test_import.py
persevera_tools/: __init__.py  pyproject.toml
persevera_tools/config/: .env.template  defaults.py  settings.py
persevera_tools/data/: __init__.py  asset_info.py  descriptors.py  financial_data_service.py  funds.py  index_composition.py  indicators.py  lookups.py  private_credit.py  sma.py
persevera_tools/data/factor_zoo/: __init__.py  __main__.py  fields.py  helpers.py  pipeline.py  transforms.py
persevera_tools/data/providers/: __init__.py  anbima.py  anbima_feed.py  b3.py  base.py  bcb_focus.py  bloomberg.py  comdinheiro.py  cvm.py  debentures_com.py  fred.py  invesco.py  investfy.py  investing_com.py  kraneshares.py  mais_retorno.py  mdic.py  sgs.py  sidra.py  simplify.py  ws_btg.py  ws_xp.py  xp_hub.py
persevera_tools/db/: __init__.py  connection.py  fibery.py  operations.py
persevera_tools/fixed_income/: __init__.py  data.py  metrics.py  pipeline.py
persevera_tools/open_finance/: pluggy.py
persevera_tools/quant_research/: hrp.py  matrix.py  metrics.py  sma.py  time_series.py  transformations.py
persevera_tools/quant_research/allocation_engine/: __init__.py  cli.py  core.py  loaders.py
persevera_tools/quant_research/risk_budgeting_spectrum/: __init__.py  config.py  core.py
persevera_tools/quant_research/risk_budgeting_spectrum/loaders/: __init__.py  fibery.py
persevera_tools/quant_research/two_stage_risk_parity/: __init__.py  config.py  core.py  test_modular.py
persevera_tools/utils/: __init__.py  dates.py  logging.py
(+3 files in other folders)
