[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persevera_tools"
dynamic = ["version"]
description = "Internal tools for Persevera Asset Management"
authors = [{ name = "Persevera Asset Management" }]
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "psycopg2-binary",
    "sqlalchemy",
    "python-dotenv",
    "xbbg",
    "sidrapy",
    "fredapi",
    "python-bcb",
    "requests",
    "statsmodels"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools.dynamic]
version = {attr = "persevera_tools.__version__"}

[tool.setuptools.packages.find]
include = ["persevera_tools*"]
